--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,13 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="text_size">24sp</dimen>
 
+    <dimen name="list_text_size">20sp</dimen>
+    <dimen name="list_subtext_size">16sp</dimen>
+
+    <dimen name="list_title_text_size">20sp</dimen>
+    <dimen name="list_view_text_size">18sp</dimen>
+
+    <dimen name="list_button_text_size">18sp</dimen>
+
     <dimen name="login_text_view_height">40dp</dimen>
 </resources>
