--- a/app/src/main/res/layout/activity_vital_measure.xml
+++ b/app/src/main/res/layout/activity_vital_measure.xml
@@ -1,5 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
@@ -20,161 +19,168 @@
             style="@style/spinnerTheme" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
             android:gravity="right"
             android:orientation="horizontal">
 
+            <TextView
+            android:layout_width="wrap_content"
+            android:layout_weight="5"
+            android:gravity="right"
+            android:layout_height="match_parent"
+            android:text=""/>
+
             <Button
                 android:id="@+id/measure_button"
                 style="?android:textAppearanceSmall"
-                android:layout_width="122dp"
+                android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:text="@string/action_measure"
                 android:textStyle="bold" />
         </LinearLayout>
-
     </LinearLayout>
 
 
-    <LinearLayout
-        android:id="@+id/msginfo"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-
+        android:layout_height="match_parent"
+        android:layout_weight="1">
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="right"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_weight="4"
-                android:gravity="right"
-                android:layout_height="match_parent"
-                android:text="@string/vital_test_heart_rate"/>
-
-            <TextView
-                android:id="@+id/test_heart_rate"
-                android:layout_width="wrap_content"
-                android:layout_weight="4"
-                android:gravity="left"
-                android:layout_height="match_parent"
-                android:text="@string/vital_test_default_value"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="right"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="70dp"
-                android:layout_height="match_parent"
-                android:layout_weight="4"
-                android:gravity="right"
-                android:text="@string/vital_test_b_heart_rate" />
-
-            <TextView
-                android:id="@+id/test_b_heart_rate"
-                android:layout_width="wrap_content"
-                android:layout_weight="4"
-                android:gravity="left"
-                android:layout_height="match_parent"
-                android:text="@string/vital_test_default_value"/>
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="right"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_weight="4"
-                android:gravity="right"
-                android:layout_height="match_parent"
-                android:text="@string/vital_test_stress"/>
-
-            <TextView
-                android:id="@+id/test_stress"
-                android:layout_width="wrap_content"
-                android:layout_weight="4"
-                android:gravity="left"
-                android:layout_height="match_parent"
-                android:text="@string/vital_test_default_value"/>
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="right"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_weight="4"
-                android:gravity="right"
-                android:layout_height="match_parent"
-                android:text="@string/vital_test_mood"/>
-
-            <TextView
-                android:id="@+id/test_mood"
-                android:layout_width="wrap_content"
-                android:layout_weight="4"
-                android:gravity="left"
-                android:layout_height="match_parent"
-                android:text="@string/vital_test_default_value"/>
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="right"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="70dp"
-                android:layout_height="match_parent"
-                android:layout_weight="4"
-                android:gravity="right"
-                android:text="@string/vital_test_signal_quality" />
-
-            <TextView
-                android:id="@+id/test_signal_quality"
-                android:layout_width="wrap_content"
-                android:layout_weight="4"
-                android:gravity="left"
-                android:layout_height="match_parent"
-                android:text="@string/vital_test_default_value"/>
-
-        </LinearLayout>
-
-
-
-        <TextView
-            android:id="@+id/test_msg"
+            android:id="@+id/msginfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:layout_marginTop="2dip"
-            android:text="" />
+            android:orientation="vertical">
 
-    </LinearLayout>
 
+            <!--<LinearLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="50dp"-->
+                <!--android:gravity="right"-->
+                <!--android:orientation="horizontal">-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    style="@style/vitalTitleTextStyle"
+                    android:text="@string/vital_test_heart_rate" />
+
+                <TextView
+                    android:id="@+id/test_heart_rate"
+                    style="@style/vitalValueTextStyle"
+                    android:text="@string/vital_test_default_value"
+                    />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:gravity="right"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="70dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="4"
+                    android:gravity="right"
+                    android:text="@string/vital_test_b_heart_rate" />
+
+                <TextView
+                    android:id="@+id/test_b_heart_rate"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="4"
+                    android:gravity="left"
+                    android:layout_height="match_parent"
+                    android:text="@string/vital_test_default_value"/>
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:gravity="right"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_weight="4"
+                    android:gravity="right"
+                    android:layout_height="match_parent"
+                    android:text="@string/vital_test_stress"/>
+
+                <TextView
+                    android:id="@+id/test_stress"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="4"
+                    android:gravity="left"
+                    android:layout_height="match_parent"
+                    android:text="@string/vital_test_default_value"/>
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:gravity="right"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_weight="4"
+                    android:gravity="right"
+                    android:layout_height="match_parent"
+                    android:text="@string/vital_test_mood"/>
+
+                <TextView
+                    android:id="@+id/test_mood"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="4"
+                    android:gravity="left"
+                    android:layout_height="match_parent"
+                    android:text="@string/vital_test_default_value"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:gravity="right"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="70dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="4"
+                    android:gravity="right"
+                    android:text="@string/vital_test_signal_quality" />
+
+                <TextView
+                    android:id="@+id/test_signal_quality"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="4"
+                    android:gravity="left"
+                    android:layout_height="match_parent"
+                    android:text="@string/vital_test_default_value"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
+
+    <TextView
+        android:id="@+id/test_msg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:layout_marginTop="2dip"
+        android:text="" />
 
     <LinearLayout
         android:layout_width="match_parent"
