--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -146,7 +146,7 @@
     <!-- list view style end -->
 
     <style name="vitalTitleTextStyle" parent="android:Widget.TextView">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">50dp</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:layout_weight">1</item>
@@ -154,7 +154,7 @@
     </style>
 
     <style name="vitalValueTextStyle" parent="android:Widget.TextView">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">50dp</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:layout_weight">1</item>
