--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="text_size">24sp</dimen>
+    <dimen name="text_size_middle">20sp</dimen>
 
     <dimen name="list_text_size">20sp</dimen>
     <dimen name="list_subtext_size">16sp</dimen>
