--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -147,18 +147,18 @@
 
     <style name="vitalTitleTextStyle" parent="android:Widget.TextView">
         <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:textSize">@dimen/list_text_size</item>
+        <item name="android:textSize">@dimen/text_size_middle</item>
     </style>
 
     <style name="vitalValueTextStyle" parent="android:Widget.TextView">
         <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:textSize">@dimen/list_text_size</item>
+        <item name="android:textSize">@dimen/text_size_middle</item>
     </style>
 
 
