--- a/app/src/main/res/layout/activity_alcohol_measure.xml
+++ b/app/src/main/res/layout/activity_alcohol_measure.xml
@@ -46,8 +46,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/alcohol_measure_used_times" />
+                android:gravity="center" />
 
             <Button
                 android:id="@+id/measure_button"
