--- a/app/src/main/res/layout/activity_alcohol_measure.xml
+++ b/app/src/main/res/layout/activity_alcohol_measure.xml
@@ -73,8 +73,8 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:layout_marginHorizontal="55dp">
+                android:layout_height="220dp"
+                android:layout_marginHorizontal="70dp">
 
                 <LinearLayout
                     android:id="@+id/camerainfo"
@@ -107,20 +107,27 @@
 
                 <TextView
                     android:id="@+id/test_value"
-                    android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
+                    android:layout_weight="1"
                     android:gravity="right"
+                    android:paddingRight="-1dp"
                     android:text="@string/alcohol_test_default_value" />
 
                 <TextView
-                    android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:paddingLeft="-1dp"
                     android:text="mg/L" />
 
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:background="@drawable/bg_msg" />
 
             <TextView
                 android:id="@+id/test_msg"
@@ -130,6 +137,11 @@
                 android:gravity="center"
                 android:text="@string/alcohol_measure_message"
                 android:textSize="24sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:background="@drawable/bg_msg" />
 
         </LinearLayout>
     </ScrollView>
