--- a/app/src/main/res/layout/activity_vital_measure.xml
+++ b/app/src/main/res/layout/activity_vital_measure.xml
@@ -143,7 +143,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/text_size_middle"
-        android:text="" />
+        android:text=""
+        android:background="@drawable/bg_msg"/>
 
     <LinearLayout
         android:layout_width="match_parent"
