--- a/app/src/main/res/layout/activity_alcohol_measure.xml
+++ b/app/src/main/res/layout/activity_alcohol_measure.xml
@@ -52,7 +52,7 @@
     </LinearLayout>
 
     <ScrollView
-        android:id="@+id/login_form"
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1">
@@ -63,9 +63,10 @@
             android:orientation="vertical">
 
             <FrameLayout
+                android:id="@+id/circle_frame"
                 android:layout_width="match_parent"
-                android:layout_height="220dp"
-                android:layout_marginHorizontal="70dp">
+                android:layout_height="match_parent"
+                android:layout_gravity="center">
 
                 <LinearLayout
                     android:id="@+id/camerainfo"
@@ -91,64 +92,68 @@
                     android:text="@string/alcohol_measure_camera_message" />
             </FrameLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/test_value"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:paddingRight="-1dp"
-                    android:text="@string/alcohol_test_default_value" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:paddingLeft="-1dp"
-                    android:text="mg/L" />
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="10dp"
-                android:background="@drawable/bg_msg" />
-
-            <TextView
-                android:id="@+id/test_msg"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bg_msg"
-                android:gravity="center"
-                android:text="@string/alcohol_measure_message"
-                android:textSize="24sp" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="10dp"
-                android:background="@drawable/bg_msg" />
-
         </LinearLayout>
     </ScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal">
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/back_button"
-            style="@style/backButtonStyle" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/next_button"
-            style="@style/nextButtonStyle" />
+            <TextView
+                android:id="@+id/test_value"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:paddingRight="-1dp"
+                android:text="@string/alcohol_test_default_value" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingLeft="-1dp"
+                android:text="mg/L" />
+
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:background="@drawable/bg_msg" />
+
+        <TextView
+            android:id="@+id/test_msg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_msg"
+            android:gravity="center"
+            android:text="@string/alcohol_measure_message"
+            android:textSize="24sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:background="@drawable/bg_msg" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal">
+
+            <Button
+                android:id="@+id/back_button"
+                style="@style/backButtonStyle" />
+
+            <Button
+                android:id="@+id/next_button"
+                style="@style/nextButtonStyle" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
