--- a/app/src/main/res/layout/activity_alcohol_measure.xml
+++ b/app/src/main/res/layout/activity_alcohol_measure.xml
@@ -37,16 +37,17 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:gravity="right"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/usge_count"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center" />
+                android:gravity="center"
+                android:text="使用回数:---"/>
         </LinearLayout>
 
     </LinearLayout>
@@ -90,6 +91,7 @@
                     android:background="@drawable/fg_round"
                     android:gravity="center"
                     android:text="@string/alcohol_measure_camera_message" />
+
             </FrameLayout>
 
         </LinearLayout>
@@ -109,41 +111,36 @@
                 android:id="@+id/test_value"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
                 android:layout_weight="1"
-                android:gravity="right"
-                android:paddingRight="-1dp"
-                android:text="@string/alcohol_test_default_value" />
+                android:gravity="end"
+                android:text="@string/alcohol_test_default_value"
+                android:textSize="@dimen/text_size"/>
+
+            <!--android:paddingRight="-1dp"-->
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:paddingLeft="-1dp"
-                android:text="mg/L" />
+                android:text="@string/alcohol_unit"
+                android:textSize="@dimen/text_size_middle"/>
+
+            <!--android:paddingLeft="-1dp"-->
 
         </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:background="@drawable/bg_msg" />
 
         <TextView
             android:id="@+id/test_msg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_msg"
-            android:gravity="center"
             android:text="@string/alcohol_measure_message"
-            android:textSize="24sp" />
+            android:textSize="@dimen/text_size_small" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:background="@drawable/bg_msg" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:gravity="center_horizontal">
 
             <Button
