--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="text_size">24sp</dimen>
     <dimen name="text_size_middle">20sp</dimen>
+    <dimen name="text_size_small">18sp</dimen>
 
     <dimen name="list_text_size">20sp</dimen>
     <dimen name="list_subtext_size">16sp</dimen>
